# ACPI-SMBIOS-Dumper

./: .gitignore  Cargo.toml  README.md  build.rs  cli_main.py  firmware_api.py  gui_main.py  index.html  parsers.py  requirements.txt
.github/workflows/: pages.yml  release.yml
src/: api.rs  cli.rs  gui.rs  main.rs  parsers.rs
