[package]
name = "acpi-smbios-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Shell",
    "Win32_System_Console",
] }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.29.1"
hex = "0.4.3"
byteorder = "1.5.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico"] }

[profile.release]
opt-level = 'z'
lto = true     
codegen-units = 1 
panic = 'abort'     
strip = true        

[build-dependencies]
embed-resource = "2.5"
